<resources>
    <string name="app_name">FitNutricion</string>

    <!-- LOGIN -->
    <string name="titulo1_text">FITNUTRICION</string>
    <string name="correo_text">Correo electronico</string>
    <string name="password_text">Contraseña</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="cuentaNueva">¿No tienes cuenta? Regístrate</string>

    <!-- REGISTER -->
    <string name="uneteAFitN_text">Regístrate</string>
    <string name="usuario_text">Nombre de usuario</string>
    <string name="confPassword_text">Confirmar contraseña</string>
    <string name="confirmar_text">Confirmar</string>

    <!-- MENU -->
    <string name="home_text">Inicio</string>
    <string name="recetas_text">Agregar alimentos</string>
    <string name="pacientes_home">Seleccione al paciente:</string>
    <string name="setting_text">Configuración</string>

    <!-- SETTINGS -->
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="modificardatos_text">MODIFICAR PERFIL</string>
    <string name="themeMode">TEMA OSCURO</string>
    <string name="cambiarIdioma">CAMBIAR IDIOMA</string>

    <!-- PROFILE -->
    <string name="profile_text">Datos personales</string>
    <string name="nombre_text">Nombre de usuario</string>
    <string name="nombrecompleto_text">Nombre completo</string>
    <string name="mail_text">Correo electronico</string>
    <string name="Edad_text">Edad</string>
    <string name="Celular_text">Celular</string>
    <string name="actualizar_text">Actualizar datos</string>
    <string name="actualizarpass_text">Actualizar contraseña</string>

    <!-- PACIENTE -->
    <string name="pacientes_text">Pacientes</string>
    <string name="agregarPaciente">Agregar paciente</string>
    <string name="añadirPaciente">Añadir paciente</string>

    <!-- AGREGAR PACIENTE -->
    <string name="ag_nombreCompleto">Nombre completo</string>
    <string name="ag_datosPaciente">Ingrese los datos del paciente</string>
    <string name="ag_edadPaciente">Edad</string>
    <string name="ag_sexoPaciente">Sexo</string>
    <string-array name="ag_sexoArray">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <!-- EDITAR PACIENTE -->
    <string name="ed_guardarCambios">Guardar cambios</string>

    <!-- RECETAS -->
    <string name="agregarComida">Agregar comida</string>
    <string name="comidaDesayuno">Desayuno</string>
    <string name="comidaComida">Comida</string>
    <string name="comidaCena">Cena</string>
    <string name="añadirDesayunoReceta">Añadir Desayuno a receta</string>
    <string name="añadirComidaReceta">Añadir Comida a receta</string>
    <string name="añadirCenaReceta">Añadir Cena a receta</string>



    <!-- DESAYUNO -->
    <string name="desayuno_text">Desayunos</string>
    <string name="agregarDesayuno">Agregar desayuno</string>

    <!-- AGREGAR DESAYUNO -->
    <string name="ag_datosComidas">Información de comida</string>
    <string name="desa_text">Desayuno</string>
    <string name="agregar_comida_tipo">Tipo de comida:</string>
    <string name="agregar_comida_nombre">Nombre de la comida</string>
    <string name="agregar_comida_ingrediente">Ingredientes</string>
    <string name="agregar_comida_calorias">Calorías</string>

    <!-- COMIDA -->
    <string name="comida_text">Comida</string>

    <!-- AGREGAR Comida -->
    <string name="comi_text">Comida</string>

    <!-- CENA -->
    <string name="cena_text">Cena</string>
    <string name="agregarCena">Agregar cena</string>


    <!-- INICIO SPINNER -->
    <string name="spinner_Desayuno">Desayuno</string>
    <string name="spinner_Comida">Comida</string>
    <string name="spinner_Cena">Cena</string>
    <string name="home_generar_pdf">Generar PDF</string>
    <string name="home_eliminar_receta">Eliminar receta</string>
    <string name="home_visualizar">Visualizar Receta</string>

    <!-- ITEM LIST COMIDAS -->
    <string name="desaYUNO_item_list">DESAYUNO</string>

    <!-- ITEM LIST agregar comida -->
    <string name="item_list_Agregar">Agregar a receta</string>
    <string name="item_list_dia">Día</string>
    <string-array name="item_list_semana">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>

    <!-- ITEM LIST agregar comida -->
    <string name="item_lunes">Lunes</string>
    <string name="item_martes">Martes</string>
    <string name="item_miercoles">Miércoles</string>
    <string name="item_jueves">Jueves</string>
    <string name="item_viernes">Viernes</string>
    <string name="item_sabado">Sabado</string>
    <string name="item_domingo">Domingo</string>

    <!-- semana fragments -->
    <string name="txt_salir">Regresar a inicio</string>

    <!-- Toast strings-->
    <string name="stringError">\"Error: \"</string>
    <string name="stringCambiosGuardadosCorrectamente">Cambios guardados correctamente</string>
    <string name="stringPacienteAgregadoCorrectamente">Paciente agregado correctamente</string>
    <string name="stringIngreseUnUsuario">Ingrese un usuario</string>
    <string name="stringIngreseUnCorreo">Ingrese un correo</string>
    <string name="stringCerrandoSesion">Cerrando sesión...</string>
    <string name="stringVerificandoDatos">Verificando datos</string>
    <string name="stringCargano">Cargando...</string>
    <string name="stringIngreseContraseña">Ingrese una contraseña</string>
    <string name="stringBienvenidoAFit">Bienvenid@ a FitNutricion</string>
    <string name="stringDatosIncorrectos">Datos incorrectos, verifique bien el correo o contraseña</string>
    <string name="stringIngreseUsuario">Ingrese un nombre de usuario</string>
    <string name="stringIngreseCorreo">Ingrese un correo</string>
    <string name="stringIngreseConfirmacion">Ingrese la confrimación de su contraseña</string>
    <string name="stringContraseñasNoCoinciden">Las contraseñas no coinciden</string>
    <string name="stringContraseñaCaracteres">La contraseña debe tener mas de 6 caracteres</string>
    <string name="stringUsuarioRegistrado">Usuario registrado</string>
    <string name="stringUsuarioNoRegistrado">Usuario no registrado </string>
    <string name="stringDatosRegistrados">\"onSuccess: Datos registrados \"</string>

</resources>