<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".fragments.RecetasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/recetas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/recetas_text"
                android:textSize="30sp"
                android:textColor="?attr/text_color"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingTop="30dp"
                />

            <Button
                android:id="@+id/comidaDesayuno"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/btn_cafe_iniciar"
                android:text="@string/comidaDesayuno"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/comidaComida"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/btn_cafe_iniciar"
                android:text="@string/comidaComida"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/comidaCena"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/btn_cafe_iniciar"
                android:layout_marginEnd="32dp"
                android:text="@string/comidaCena"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>