<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeLima"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="659.18dp"
        android:layout_height="834.39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/ellipse_1"
        android:rotation="-17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/uneteABiblio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:text="@string/uneteAFitN_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:textStyle="italic"
        android:textColor="?attr/text_color"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/usuario_etxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_design"
        android:hint="@string/usuario_text"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="?attr/text_color"
        android:textColorHint="@color/light_white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uneteABiblio"/>

    <EditText
        android:id="@+id/correo_etxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_design"
        android:hint="@string/correo_text"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="?attr/text_color"
        android:textColorHint="@color/light_white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_etxt" />

    <EditText
        android:id="@+id/password_etxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_design"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="?attr/text_color"
        android:textColorHint="@color/light_white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo_etxt" />

    <EditText
        android:id="@+id/confPassword_etxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_design"
        android:hint="@string/confPassword_text"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="?attr/text_color"
        android:textColorHint="@color/light_white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_etxt" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_login"
        android:backgroundTint="@color/btn_cafe_iniciar"
        android:onClick="onClick"
        android:text="@string/confirmar_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confPassword_etxt" />

</androidx.constraintlayout.widget.ConstraintLayout>