<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.AgregarPacienteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/datosPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ag_datosPaciente"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="24dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/nombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ag_nombreCompleto"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/datosPaciente"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/paciente_nombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ag_nombreCompleto"
            android:textColorHint="@color/light_white"
            android:textSize="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/nombreCompleto"
            />

        <TextView
            android:id="@+id/correoPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo_text"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/paciente_nombreCompleto"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/paciente_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_text"
            android:textColorHint="@color/light_white"
            android:textSize="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/correoPaciente"
            />

        <TextView
            android:id="@+id/edadPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ag_edadPaciente"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/paciente_correo"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/paciente_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ag_edadPaciente"
            android:textColorHint="@color/light_white"
            android:textSize="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/edadPaciente"
            />

        <Button
            android:id="@+id/btn_añadirPacientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:text="@string/añadirPaciente"
            android:textColor="@color/black"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>