<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EditarComidaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/datosPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ag_datosComidas"
                    android:textColor="?attr/text_color"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_editar_img"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/img_agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/datosPaciente"/>

                <TextView
                    android:id="@+id/tipocomida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar_comida_tipo"
                    android:textColor="?attr/text_color"
                    app:layout_constraintTop_toBottomOf="@+id/btn_agregar_comida"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tv_tipocomida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comida_text"
                    android:textColor="?attr/text_color"
                    app:layout_constraintTop_toBottomOf="@+id/tipocomida"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/correoPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar_comida_nombre"
                    android:textColor="?attr/text_color"
                    app:layout_constraintTop_toBottomOf="@+id/comida_tipocomida"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/editar_paciente_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agregar_comida_nombre"
                    android:textColorHint="@color/light_white"
                    android:textSize="16dp"
                    android:textColor="?attr/text_color"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/correoPaciente"
                    />

                <TextView
                    android:id="@+id/comidaIngrediente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar_comida_ingrediente"
                    android:textColor="?attr/text_color"
                    app:layout_constraintTop_toBottomOf="@+id/comida_nombreComida"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/editar_Ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agregar_comida_ingrediente"
                    android:textColorHint="@color/light_white"
                    android:textSize="16dp"
                    android:textColor="?attr/text_color"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/comidaIngrediente"
                    />

                <TextView
                    android:id="@+id/comidaCalorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar_comida_calorias"
                    android:textColor="?attr/text_color"
                    app:layout_constraintTop_toBottomOf="@+id/comida_ingredientes"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/editar_calorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agregar_comida_calorias"
                    android:textColorHint="@color/light_white"
                    android:textSize="16dp"
                    android:textColor="?attr/text_color"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/comidaCalorias"
                    />

                <Button
                    android:id="@+id/btn_editarDesayuno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/btn_cafe_iniciar"
                    android:text="@string/ed_guardarCambios"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/comida_calorias" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>